--- a/AdultGoldStars/AdultGoldStars/Main.storyboard
+++ b/AdultGoldStars/AdultGoldStars/Main.storyboard
@@ -18,8 +18,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" customColorSpace="sRGB" colorSpace="calibratedRGB" red="0" green="0" blue="0.4" alpha="1"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="26" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" image="star.png">
+                                <rect key="frame" x="60" y="222" width="294" height="292"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="middleTruncation" id="21" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
-                                <rect key="frame" x="86" y="353" width="259" height="45"/>
+                                <rect key="frame" x="78" y="544" width="259" height="45"/>
                                 <state key="normal" backgroundImage="facebook.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -28,6 +31,12 @@
                                 </connections>
                                 <rect key="contentStretch" x="0.0" y="0.0" width="1" height="1"/>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adult Gold Stars" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                                <rect key="frame" x="116" y="350" width="182" height="37"/>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <variation key="heightClass=regular-widthClass=compact">
                             <color key="backgroundColor" colorSpace="calibratedRGB" red="0" green="0" blue="0.4" alpha="1"/>
