--- a/AdultGoldStars/AdultGoldStars/Main.storyboard
+++ b/AdultGoldStars/AdultGoldStars/Main.storyboard
@@ -28,7 +28,7 @@
                                 </state>
                                 <connections>
                                     <action selector="FacebookLogin_TouchUpInside:" destination="BYZ-38-t0r" id="22" eventType="touchUpInside"/>
-                                    <segue id="323" destination="289" kind="show"/>
+                                    <segue id="370" destination="344" kind="show"/>
                                 </connections>
                                 <rect key="contentStretch" x="0.0" y="0.0" width="1" height="1"/>
                             </button>
@@ -67,32 +67,47 @@
             </objects>
             <point key="canvasLocation" x="-371" y="-238"/>
         </scene>
-        <scene sceneID="288">
+        <scene sceneID="343">
             <objects>
-                <tableViewController id="289" sceneMemberID="viewController" customClass="StarPicker" storyboardIdentifier="StarPicker">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="290">
+                <viewController id="344" sceneMemberID="viewController" customClass="MainMenu" storyboardIdentifier="MainMenu">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="341"/>
+                        <viewControllerLayoutGuide type="bottom" id="342"/>
+                    </layoutGuides>
+                    <view contentMode="scaleToFill" id="372" key="view">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" colorSpace="calibratedRGB" red="0" green="0" blue="0.4" alpha="1"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="293">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="293" id="294" customClass="StarPickerController">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="289" id="291"/>
-                            <outlet property="delegate" destination="289" id="292"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="295" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="373" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                                <rect key="frame" x="138" y="341" width="138" height="42"/>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="20"/>
+                                <color key="backgroundColor" colorSpace="calibratedRGB" red="1" green="0.8" blue="0" alpha="1"/>
+                                <state key="normal" title="Create Star">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="UIButton373_TouchUpInside:" destination="344" id="376" eventType="touchUpInside"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="374" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                                <rect key="frame" x="138" y="403" width="137" height="42"/>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="20"/>
+                                <color key="backgroundColor" colorSpace="calibratedRGB" red="1" green="0.8" blue="0" alpha="1"/>
+                                <state key="normal" title="Send Star">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="UIButton374_TouchUpInside:" destination="344" id="375" eventType="touchUpInside"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="346" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="756" y="-249"/>
+            <point key="canvasLocation" x="767" y="-260"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
@@ -102,4 +117,5 @@
         <image name="star.png" width="830" height="789"/>
         <image name="facebook.png" width="988" height="160"/>
     </resources>
+    <color key="tintColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
 </document>
